History of this buildout
========================

5.0.11 (unreleased)
-------------------

- Avoid double underlines in listing of newsletter.
  'li.newsitemslist a' got an underline, but '#content a:link'
  already got a bottom border.
  [maurits]

- Register document actions viewlet above the content title.
  Float them to the right.
  [maurits]

- Fix newsitem_view by making it a browser view.
  The title was shown twice when viewing it.
  [maurits]

- Removed tabsDropMenu.js which gave an error but was not used.
  Removed unused global_menu.pt and global_sections.pt.
  [maurits]

- css: load the portal header.jpg from the Plone Site root.
  [maurits]


5.0.10 (2013-05-28)
-------------------

- Disallow adding anything directly to the existing Digibib.
  [maurits]


5.0.9 (2013-05-16)
------------------

- Various improvements to styling, viewlets, migration document.
  [maurits]


5.0.8 (2013-05-08)
------------------

- Added upgrade step to restore a normal MailHost.
  [maurits]


5.0.7 (2013-04-22)
------------------

- Cleanup PLONE4-UPGRADE-NOTES.txt.
  [maurits]


5.0.6 (2013-04-18)
------------------

- Completely refuse to send an email when an email has already been
  sent for a context.  A reset is required.
  [maurits]

- Allow resetting the emailSent time when half an hour has passed.
  [maurits]

- Update find-links to Plone release 4.2.4 & thirdparty on dist.plone.org
  [fred]
  
- Remove lxml (z3c.rescipe.staticlxml) from the parts as the lxml should
  nowadays be able to compile fine on both OS X and linux if the necessary
  libraries are present (libxml2-dev, libxslt-dev).
  [fred]


5.0.5 (2013-03-25)
------------------

- Hide the personal bar viewlet.
  [maurits]


5.0.4 (2013-03-25)
------------------

- Styling.
  [maurits]


5.0.3 (2013-03-15)
------------------

- Remove some more css and javascript and add note to uninstall kupu.
  [maurits]


5.0.2 (2013-03-15)
------------------
